cyberpunkred-raycw.css
/* ... */
 .sheet-cyberware .sheet-diagram .sheet-leftarm{
  position: absolute;
  left: 762px;
  top: 414px;
  width: 398px;
 }

.sheet-cyberware .sheet-diagram .sheet-neurallink{
  position: absolute;
  left: 357px;
  top: 657px;
  width: 478px;
 }

 .sheet-cyberware .sheet-diagram .sheet-rightleg{
  position: absolute;
  left: 63px;
  top: 879px;
  width: 399px;
 }

 .sheet-cyberware .sheet-diagram .sheet-leftleg{
  position: absolute;
  left: 755px;
  top: 879px;
  width: 399px;
 }


/*----------------- LIFEPATH SHEET ------------------*/

.sheet-progression {
  grid-area: progression;
  display: grid;
  grid-template-columns: 2fr 3fr;
  grid-template-rows: 1fr 1fr 1fr;
  grid-gap: 4px;
}

.sheet-progression div
, .sheet-lp div
, .sheet-personal div
, .sheet-rolespecific div{
  display: flex;
  background: white;
  padding: 4px;
  flex-direction: column;
}

.sheet-progression .sheet-alias {
  grid-area: 1 / 1 / 2 / 3 ;
}

.sheet-progression .sheet-improvement {
  grid-area: 2 / 1 / 3 / 2 ;
}

.sheet-progression .sheet-reputation {
  grid-area: 3 / 1 / 4 / 2 ;
}

.sheet-progression .sheet-repevents {
  grid-area: 2 / 2 / 4 / 3 ;
}

.sheet-inventory {
  grid-area: inventory;
}

.sheet-gear-name{
  width: 35%;  
}

.sheet-gear-notes{
  width: 64%;  
}
.sheet-gear-name input, .sheet-gear-notes input,{
  width: 100%;
}

.sheet-rolespecific {
  grid-area: rolespecific;
  padding: 4px;
}

.sheet-rolespecific .sheet-rolespecificdetails {
  background: white;
  padding: 4px;
  height: 100%;
}

.sheet-personal {
  grid-area: personal;
  display: grid;
  grid-template-columns: 4fr 2fr 3fr;
  grid-template-rows: 2fr 1fr;
  grid-gap: 4px;
}

.sheet-personal .sheet-fashion {
  grid-area: 1 / 1 / 2 / 4;
}

.sheet-personal .sheet-housing {
  grid-area: 2 / 1 / 3 / 2;
}

.sheet-personal .sheet-rent {
  grid-area: 2 / 2 / 3 / 3;
}

.sheet-personal .sheet-lifestyle {
  grid-area: 2 / 3 / 3 / 4;
}

.sheet-lp {
  grid-area: lp;
  display: grid;
  grid-template-rows: auto auto auto auto auto auto 1fr 2fr ;
  grid-template-columns: 1fr 1fr;
  grid-gap:4px;
}


.sheet-lp .sheet-enemies{
  grid-column: 1 / 3;
  display: grid;
  grid-template-columns:auto auto auto auto; 
  grid-template-rows:auto auto 1fr 1fr 1fr;
  grid-gap: 4px;
}

.sheet-lp .sheet-enemies div{
  background: #CD272C;
}

.sheet-lp .sheet-enemies .sheet-title{
  grid-column: 1 / 5;
}

.sheet-lp .sheet-enemies h3, .sheet-lp .sheet-enemies h4{
  text-align: center;
  color: white;
}

.sheet-lp .sheet-enemies .sheet-item{
  border: solid 1px  #CD272C;
  background: none;
  border-radius: 5px;
}



.sheet-lifepath input, 
.sheet-lifepath textarea,
.sheet-profile input,
.sheet-profile textarea {
  width: 100%;
  border: none;
  height: 100%;
  resize: none;
  margin: 0;
  padding: 0;
}



/*----------------- GENERAL CSS ------------------*/

.sheet-section {
    padding: 4px;
    background-color: #CD272C;
}

.sheet-statbox {
  background:white;
  overflow: hidden;
  clip-path: 
    polygon(
      0% 2rem,                 /* top left */
      2rem 0%,                 /* top left */
      100% 0%,               /* top right */
      100% 100%,               /* bottom right */
      0%   100%                    /* bottom left */
    );
  text-align:right;
  padding-right:6px;
}

.sheet-statbox label {
  text-align: right;
  padding-top: 8px;
}


.sheet-skills table, .sheet-weaponarmor table {
  border-spacing: 4px;
  border-collapse: separate;
  width: 100%;
  font-size: 1.2rem;
}

.sheet-skills th, .sheet-weaponarmor th {
  padding: 0.2rem 0.5rem;
  color: white;
  background: #0f0f0f;
  text-align: center;
}

.sheet-skills th:first-child {
  text-align: left;
  width: 200px;
}

.sheet-weaponarmor th:first-child {
  text-align: left;
  width: 200px;
}

.sheet-skills td, .sheet-weaponarmor td {
  padding: 0.2rem 0.5rem;
  background: white;
  text-align: center;
}

.sheet-skills td:first-child, .sheet-weaponarmor td:first-child{
  text-align: left;
  font-weight: normal;
}


.sheet-skills td:first-child button, .sheet-weaponarmor td:first-child button{
  text-align: left;
  width: 100%;
  font-weight: normal;
  font-size: 1.2rem;
}

.sheet-languages{
  width: 50px !important;
}

.sheet-local-expert{
  width: 63px !important;
}

.sheet-science{
  width: 40px !important;
}

.sheet-instrument{
  width: 58px !important;
}

.sheet-basic td:first-child button {
  text-align: left;
  font-weight: bold;
}

.sheet-skills input, .sheet-weaponarmor input {
  height: 1.3em !important;
  border: 0;
}

.sheet-stats input {
  height: 1.3em !important;
  border: 0;
  text-align:center;
  padding: 0;
  margin: 0;
  font-size: 2rem;
  width: 1em !important;
}



.sheet-skills input[type=number], .sheet-weaponarmor input[type=number] {
  width: 2em;
  text-align: center;
}

.sheet-skills input[type=number]:disabled, .sheet-weaponarmor input[type=number]:disabled {
  background: none;
}

.sheet-skills input[type=text] {
  width: 8rem;
  margin-left: 0px;
  padding: 0 !important;
}

.sheet-weaponarmor input[type=text] {
  width: 15rem;
  margin-left: 0px;
  padding: 0 !important;
}

.sheet-weaponarmor .sheet-weapon input[type=text] {
  width: 12rem;
  margin-left: 0px;
  padding: 0 !important;
}

.sheet-hp textarea{
  width:96%;
  height:90px;
  resize: none;
  border: none;
}


/*------------- Section-specific CSS -------------*/

.sheet-profile {
  grid-area: profile;
  display: grid;
  grid-gap: 4px;

  
}

.sheet-shownewcharacter[value="0"] ~ .sheet-profile {
  grid-template-rows: 1fr 1fr 1fr 5fr 1.5fr 1.5fr;
}

.sheet-shownewcharacter[value="1"] ~ .sheet-profile {
  grid-template-rows: 1.5fr 1fr 1fr 1fr auto 1.5fr 1.5fr;
}


.sheet-profile div.sheet-prof-info {
  background:white;
  overflow: hidden;
  display: flex;
  background: white;
  padding: 4px;
  flex-direction: column;
}


.sheet-profile .sheet-hp-humanity{
  display: grid;
  grid-template-columns: 1.4fr 1fr 1fr;
}
/* ... */

